# larpandora

./: CMakeLists.txt
larpandora/LArPandoraAnalysis/: CMakeLists.txt  PFParticleHitDumper_module.cc  PFParticleMonitoring_module.cc  PFParticleTrackAna_module.cc
larpandora/LArPandoraEventBuilding/: CMakeLists.txt  LArPandoraShowerCreation_module.cc
larpandora/LArPandoraEventBuilding/LArPandoraShower/: CMakeLists.txt  LArPandoraModularShowerCreation_module.cc  pandorashowermodules.fcl
larpandora/LArPandoraEventBuilding/LArPandoraShower/Algs/: CMakeLists.txt  LArPandoraShowerAlg.cxx  LArPandoraShowerAlg.h  LArPandoraShowerCheatingAlg.cxx  LArPandoraShowerCheatingAlg.h  ShowerElementHolder.hh  ShowerProducedPtrsHolder.hh  ShowerProduedPtrsHolder.hh  pandorashoweralgs.fcl
larpandora/LArPandoraEventBuilding/LArPandoraShower/Tools/: CMakeLists.txt  IShowerTool.h  Shower2DLinearRegressionTrackHitFinder_tool.cc  Shower3DCylinderTrackHitFinder_tool.cc  Shower3DTrackHitFinder_tool.cc  ShowerBayesianTrucatingdEdx_tool.cc  ShowerBestPlaneDesicion_tool.cc  ShowerDecisionBestPlane_tool.cc  ShowerDirectionTopologyDecision_tool.cc  ShowerExampleTool_tool.cc  ShowerGenericTool_tool.cc  ShowerIncrementalTrackHitFinder_tool.cc  ShowerLengthPercentile_tool.cc  ShowerLikelihooddEdxCutting_tool.cc  ShowerLinearEnergy_tool.cc  ShowerNumElectronsEnergy_tool.cc  ShowerPCADirection_tool.cc  ShowerPCAEigenvalueLength_tool.cc  ShowerPCAPropergationStartPosition_tool.cc  ShowerPFPVertexStartPosition_tool.cc  ShowerPandoraSlidingFitTrackFinder_tool.cc  ShowerRecoEnergyfromNumElectrons_tool.cc  ShowerResidualTrackHitFinder_tool.cc  ShowerSkeletonTool_tool.cc  ShowerSlidingStandardCalodEdx_tool.cc  ShowerSmartTrackTrajectoryPointDirection_tool.cc  ShowerStandardCalodEdx_tool.cc  ShowerTrackColinearTrajPointDirection_tool.cc  ShowerTrackDirection_tool.cc  ShowerTrackHitDirection_tool.cc  ShowerTrackPCADirection_tool.cc  ShowerTrackSpacePointDirection_tool.cc  ShowerTrackStartPosition_tool.cc  ShowerTrackTrajPointDirection_tool.cc  ShowerTrackTrajToSpacePoint_tool.cc  ShowerTrackTrajToSpacepoint_tool.cc  ShowerTrackTrajectoryPointDirection_tool.cc  ShowerTrajPointdEdx_tool.cc  ShowerUnidirectiondEdx_tool.cc  pandorashowertools.fcl  (+1 more)
larpandora/LArPandoraEventBuilding/LArPandoraShower/Tools/Cheating/: CMakeLists.txt  ShowerDirectionCheater_tool.cc  ShowerStartPositionCheater_tool.cc  ShowerTrackFinderCheater_tool.cc
larpandora/LArPandoraInterface/: CMakeLists.txt  LArPandora.cxx  LArPandora.h  LArPandoraGeometry.cxx  LArPandoraGeometry.h  LArPandoraHelper.cxx  LArPandoraHelper.h  LArPandoraInput.cxx  LArPandoraInput.h  LArPandoraOutput.cxx  LArPandoraOutput.h  StandardPandora_module.cc
ups/: product_deps
